<resources>
    <string name="app_name">InstaTram</string>
    <string name="welcome_to_barcelona">Welcome \n to \n Barcelona</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="capture_photo">Take a Picture</string>
    <string name="open_gallery">Upload a Picture</string>
    <string name="settings">Settings</string>
    <string name="language">Languages</string>
    <string name="choose_language_text">Languages</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="theme">Themes</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="main_menu">Main Menu</string>
    <string name="is_title">Choose Image </string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Images</string>
    <string name="lbl_add_pic">Add Picture</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="add_title">add title</string>
    <string name="label_no_Pic_added_yet">No pictures added yet!!!</string>
    <string name="lbl_delete">Delete this Image</string>
    <string name="lbl_edit_posted_pic">Edit title of Image</string>
    <string name="system_default">System default</string>
    <string name="permission_off">It look like you have turned off permissions required for this feature. It can be enable under Application Settings</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="image">Image</string>
    <string name="update_title">Update Title</string>
    <string name="permission_gallery_denied">you have denied the storage permission to select image</string>
    <string name="pic_deleted">Post Deleted</string>
    <string name="no_title">No Title</string>
    <string name="title_updated">Title Updated</string>
    <string name="canceled">Canceled</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="discard_post">Discard Post</string>
    <string name="cancel_update_message">If you discard now, you will lose your update</string>
    <string name="cancel_update_title">Discard Update ?</string>
    <string name="confirm_delete_pic">Do you want to delete this picture</string>
    <string name="confirm_delete_pic_title">Delete Picture?</string>
    <string name="you_successfully_added_your_image">you successfully added your image</string>
    <string name="no_picture">No Picture</string>
    <string name="discard_update">Discard Update</string>
    <string name="cancel_post_message">if you discard now, you will lose your post</string>
    <string name="cancel_post_title">Discard Post ?</string>
    <string name="keep">Keep</string>


</resources>