<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    app:chainUseRtl="true">
    <TextView
        android:id="@+id/is_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_title"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:textColor="@color/black_white"
        app:layout_constraintBottom_toTopOf="@+id/is_camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/is_camera"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_12sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/lbl_camera"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black_white"
        android:gravity="center"
        app:drawableTopCompat ="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/is_gallery"
        app:layout_constraintTop_toBottomOf="@id/is_title"/>

    <TextView
        android:id="@+id/is_gallery"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_12sdp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/lbl_gallery"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black_white"
        app:drawableTopCompat ="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/is_camera"
        app:layout_constraintTop_toBottomOf="@id/is_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>