<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    app:layout_constraintVertical_chainStyle="spread_inside"
    android:focusable="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="393dp"
        android:layout_height="110dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.134">
        <EditText
            android:id="@+id/et_title"
            android:layout_width="328dp"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:layout_marginTop="76dp"
            android:autofillHints=""
            android:hint="@string/add_title"
            android:inputType="text"
            android:textSize="@dimen/_15sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131"
        android:clickable="true"
        android:focusable="true">
        <ImageView
            android:id="@+id/picView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />
        <ImageView
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:clickable="true"
            android:padding="@dimen/_16sdp"
            android:src="@drawable/ic_edit"
            android:focusable="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/btn_post"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.231" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_post"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.231" />

</androidx.constraintlayout.widget.ConstraintLayout>